# openbot

./: .gitignore  README.md  analyze_coverage.py  check_code_health.py  execute_tests.py  pyproject.toml  run_config_tests.py  test_botflow.py  test_botflow_simple.py  test_fixes.py  test_imports.py  test_system.py
.github/workflows/: python-package.yml
E:\src\openbot\.openbot/config/: config.json
config/: system_prompt.md
config/subagents/: webfetch.json
data/: botflow.db  test_botflow.db
docs/: 2026-02-20-CODE_REVIEW_REPORT.md  2026-02-20-RECOMMENDED_CHANGES.md  2026-02-20-openbot-code-review.md  CODE_REVIEW_REPORT-2026-02-23.md  vxsched.py
docs/design/: v0.2.0_design.md  v0.2.0_detailed_design.md
docs/plans/: 2026-02-19-openbot-design.md  2026-02-19-openbot-implementation.md  2026-02-21-openbot-implementation-test-plan.md  2026-02-24-botflow-design.md  2026-02-24-botflow-implementation-plan-v2.md  2026-02-24-botflow-implementation-plan.md  2026-02-24-v0.2.0-completion-plan.md  2026-03-12-openbot-design.md
docs/requirements/: v0.2.0_requirements.md  v0.2.0_requirements_complete.md
examples/: config.json  wechat_echo.py
memory/: AGENT.md  USER.md  progress.md
skills/using-uv/: SKILL.md
skills/writing-skills/: SKILL.md
src/openbot/: __init__.py  app.py  cli.py  config.py  main.py
src/openbot/agents/: __init__.py  cli.py  core.py  model.py  model_manager.py  models.py  system_prompt.py  (+2 more)
src/openbot2/: config.py  main.py
tests/: conftest.py  run_tests.py  test.debug.py  test_api.py  test_botflow.py  test_config.py  test_send_simple.py
tests/agents/: test_model_manager.py  test_tool_manager.py
tests/integration/: test_mcp_integration.py  test_system.py
tests/unit/: test_agent.py  test_agents_init.py  test_basic.py  test_botflow.py  test_botflow_init.py  test_channels.py  test_channels_init.py  test_channels_only.py  test_cli.py  test_config.py  test_config_import.py  test_config_only.py  test_console.py  test_evolution.py  test_import_only.py  test_imports.py  test_main.py  test_mcp_communication.py  test_mcp_functionality.py  test_mcp_import.py  test_models.py  test_modules.py  test_processor.py  test_router.py  test_session.py  test_session_only.py  test_simple.py  test_task.py  test_tools.py  test_trigger.py  test_websocket.py
tests/utils/: test_tool_messages_utils.py
(+75 files in other folders)
