[project]
name = "openbot"
version = "0.1.0"
description = "AI Bot with multi-channel support and self-evolution capabilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.1",
    "deepagents-cli>=0.0.23",
    "langchain>=0.3.0",
    "langchain-core>=1.2.14",
    "langchain-openai>=0.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.1.0",
    "prompt-toolkit>=3.0.36",
    "rich>=13.7.0",
    "vxsched>=20260121",
    "vxutils>=20260127",
]

[project.scripts]
openbot = "openbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]
