[project]
name = "openbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vex1023", email = "vex1023@qq.com" }
]
requires-python = ">=3.13"
dependencies = [
    "agentscope>=1.0.16",
    "agentscope-runtime>=1.1.0",
    "vxutils>=20260225",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
openbot = "openbot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
